Bug 154501 - Fileopen PPTX: Table with rotated text rendering wrong again
Summary: Fileopen PPTX: Table with rotated text rendering wrong again
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.3.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.4.7 target:7.5.3.2
Keywords: bibisected, bisected, filter:pptx, regression
Depends on:
Blocks: Vertical-Text
  Show dependency treegraph
 
Reported: 2023-03-31 07:33 UTC by Timur
Modified: 2023-05-03 10:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
printscreen from powerpoint (18.51 KB, image/png)
2023-04-01 18:16 UTC, raal
Details
reproducer (57.65 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-04-27 07:57 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2023-03-31 07:33:27 UTC
Rotated text in table from PPTX was fixed in bug 100926 in LO 5.4. 
There was also a follow-up commit. 

Later in 7.3 it regressed with:
https://git.libreoffice.org/core/+/eec42f0dbcc79a4c9f456ce97fa1066b8031ea28
commit eec42f0dbcc79a4c9f456ce97fa1066b8031ea28	[log]
author	Noel Grandin <noelgrandin@gmail.com>	Sun Aug 15 17:35:58 2021
pass OutlinerParaObject around by value

Should be tested taking into account the following:
    https://gerrit.libreoffice.org/c/core/+/149545
    https://gerrit.libreoffice.org/c/core/+/149737
Comment 1 Timur 2023-03-31 07:43:14 UTC
Can be tested with the same PPTX sample attachment 126217 [details].
Comment 2 raal 2023-04-01 18:16:45 UTC
Created attachment 186396 [details]
printscreen from powerpoint
Comment 3 raal 2023-04-01 18:17:31 UTC
Confirm with Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8e97ef854fb225dac37185c1911894b7d206fa8d
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 4 Noel Grandin 2023-04-13 19:29:31 UTC
fix https://gerrit.libreoffice.org/c/core/+/150376
Comment 5 Commit Notification 2023-04-14 05:54:18 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ad97694737c99889bc0eb21efccb83768d510361

tdf#154501 - Fileopen PPTX: Table with rotated text wrong

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-04-17 10:52:15 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/aaa077ccf4600f582cd33b7510f0d911bf5845d6

tdf#154501 - Fileopen PPTX: Table with rotated text wrong

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-04-17 10:59:19 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/0ceddcdff4a7a5d18f1ef5e6865a5f85a8553e6d

tdf#154501 - Fileopen PPTX: Table with rotated text wrong

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Timur 2023-04-20 09:38:25 UTC
This was fixed, thanks Noel.
But it went wrong again with source 178832ef7139b9279a3ae0056eb11be9c476800e from https://gerrit.libreoffice.org/c/core/+/149737.
Let us wait for a while to see whether it will be corrected, I'll write here.
Comment 9 Commit Notification 2023-04-21 08:02:54 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4232907e0a8a5bd87c673afd9df0031dce74d798

related tdf#154501: pptx import: push cell's RotateAngle after text

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Timur 2023-04-26 16:20:16 UTC
It will be fully fixed with https://gerrit.libreoffice.org/c/core/+/150955.
Comment 11 Timur 2023-04-27 07:09:06 UTC
Noel's fix was for fileopen and backported, Sarper's fix in 7.6 is for saving to PPTX.
Comment 12 Timur 2023-04-27 07:57:05 UTC
Created attachment 186950 [details]
reproducer

Let me keep here single reproducer. 
For all missing directions there are TDF reports.
Comment 13 Commit Notification 2023-04-27 14:26:30 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-3":

https://git.libreoffice.org/core/commit/17e3f1b4d2fb209f71b095528b127d24125048b4

tdf#154501 - Fileopen PPTX: Table with rotated text wrong

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.