tdf#154501 - Fileopen PPTX: Table with rotated text wrong

regression from

    commit eec42f0dbcc79a4c9f456ce97fa1066b8031ea28
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Sun Aug 15 17:35:58 2021 +0200
    pass OutlinerParaObject around by value

where some of code I converted needed to be mutating the
OutlinerParaObject that something else held, rather than mutating
a local copy.

Change-Id: Ib91dddb3fc0d4190868f9fd59becb0d366af5e19
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150376
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit ad97694737c99889bc0eb21efccb83768d510361)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151528
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Sarper Akdemir <sarper.akdemir@collabora.com>